// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultLayout /> tests feature banner tests Level up banner 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main"
    >
      <div />
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          />
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="featuresBanner levelUp"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
          style="min-width: 800px; width: 95%;"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--padding-right-small"
          >
            <p
              class="StyledProps--font StyledProps--main btn StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-right-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
                data-icon="flash"
              >
                <svg
                  height="25"
                  viewBox="0 0 33 28"
                  width="25"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.773 17.341L20.885 1.75l-2.297 8.909h8.184L9.66 26.25l2.297-8.909z"
                    fill="#ff5310"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              common.levelUp
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-small"
            >
              This is a feature banner
            </p>
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.manageSubscription
            </span>
          </button>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
          data-testid="feature-banner-dismiss"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="children"
      />
    </div>
  </div>
</div>
`;

exports[`<DefaultLayout /> tests feature banner tests Overuse banner 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main"
    >
      <div />
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          />
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="featuresBanner overUse"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
          style="min-width: 800px; width: 95%;"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--padding-right-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-right-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-yellow900"
                icon="warning-sign"
              >
                <svg
                  data-icon="warning-sign"
                  height="25"
                  viewBox="0 0 20 20"
                  width="25"
                >
                  <desc>
                    warning-sign
                  </desc>
                  <path
                    d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              common.overuse
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-small"
            >
              This is a feature banner
            </p>
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.manageSubscription
            </span>
          </button>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
          data-testid="feature-banner-dismiss"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="children"
      />
    </div>
  </div>
</div>
`;

exports[`<DefaultLayout /> tests feature banner tests features banner is rendered 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main"
    >
      <div />
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          />
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="featuresBanner info"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
          style="min-width: 800px; width: 95%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-form-message-warning StyledProps--padding-right-small"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main infoIcon StyledProps--padding-right-medium"
              data-icon="info-message"
            >
              <svg
                fill="none"
                height="25"
                viewBox="0 0 24 24"
                width="25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 21.494c-5.385 0-9.75-4.365-9.75-9.75s4.365-9.75 9.75-9.75 9.75 4.365 9.75 9.75a9.704 9.704 0 01-1.55 5.276l1.484 3.44a.75.75 0 01-.985.986l-3.447-1.486A9.704 9.704 0 0112 21.494zM10.876 7.62a1.125 1.125 0 102.25 0 1.125 1.125 0 00-2.25 0zM12 10.225a.75.75 0 00-.75.75v4.502a.75.75 0 001.5 0v-4.502a.75.75 0 00-.75-.75z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            This is a feature banner
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.manageSubscription
            </span>
          </button>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
          data-testid="feature-banner-dismiss"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="children"
      />
    </div>
  </div>
</div>
`;
